исправил метод getAllItems()